--- a/index.html
+++ b/index.html
@@ -1,68 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html>
-<head>
-<title>GetTemplate.com - Dark Theme</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link href="images/styles.css" rel="stylesheet" type="text/css" />
-</head>
 <body>
-
-<div id="HEADER">
-	<h1>Your Company</h1>
-	<ul>
-		<li><a href="#">Contact Us</a></li>
-		<li><a href="#">Sign Up</a></li>
-		<li><a href="#">Sign In</a></li>
-		<li><a href="#">News</a></li>
-		<li><a href="#">Home</a></li>
-	</ul>
-	<div class="Visual"> </div>
-</div>
-
-<div id="CONTENT">
-	<h2>Welcome</h2>
-	<div id="TEXT">
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nunc rhoncus, eros nec dictum adipiscing, mauris orci ornare pede, a dictum neque lacus sed ligula. Pellentesque mollis arcu quis lorem. Sed vitae quam et mauris euismod aliquam. Pellentesque quis nisl a ante iaculis volutpat. Duis varius sem at nisi. Etiam mattis scelerisque erat. Maecenas lacus sapien, elementum non, semper id, gravida vel, risus. Suspendisse mi risus, iaculis in, bibendum quis, pulvinar eget, velit. Fusce neque libero, vestibulum a, fermentum vel, rutrum sit amet, mauris. Ut ac dui. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse interdum nisi congue ligula. </p>
-		<p>Nam dignissim ligula vel sapien. Curabitur viverra lacus sagittis sem. Donec pretium pretium sapien. Aenean dapibus, augue quis pulvinar iaculis, velit libero rhoncus dui, a adipiscing elit libero at elit. Donec facilisis mauris quis dui. Donec et justo. Praesent ornare vestibulum quam. Sed ultricies pellentesque mi. Etiam odio. Aenean justo. Fusce quis massa ac risus sodales ultricies. Duis eget eros sed ante placerat dignissim. </p>
-	</div>
-</div>
-
-<div id="FOOTER">
-<p><a href="#">FAQ</a> &bull; <a href="#">Terms</a> &bull; <a href="#">Privacy Policy</a> &bull; <a href="#">About Us</a></p>
-<p>Your Company &copy; 2006 </p>
-<p><a href="http://www.gettemplate.com">Designed by GetTemplate.com</a></p>
-</div>
- 
 	
-<style>
-
-	/* STANDARD TAG REDEFINITIONS */
-BODY{ color: White; font-family: Arial, Helvetica, sans-serif; font-size: 10pt; background-color: Black; margin: 0; padding: 0; }
-TD {font-size: 10pt;  }
-p { font-size: 10pt;  margin-bottom: 7px; margin-top: 0; }
-a{ color: #76DEFC; text-decoration: none; }
-a:hover{	text-decoration: underline;  color: White;   }
-form{	margin:0;}
-
-#HEADER{	width:760px; margin-left:auto; margin-right:auto;}
-#HEADER ul{ margin: 0; padding-left: 0; height: 44px; line-height: 44px; display: block; list-style: none; background-color: #4D4D4D; background-image: url(bg_topnav.gif); background-repeat: no-repeat;  }
-#HEADER li{ display: inline; background-color: #222222;  float: right;  }
-#HEADER li a{ height: 44px; line-height: 44px; display: block; padding-left: 27px; padding-right: 27px; border-left: 1px solid Black;  float: left;     }
-#HEADER li a:hover{ background-color: #444444; text-decoration: none;}
-#HEADER .Visual{ height:130px; background-image: url(bg_visual.jpg);  background-repeat: no-repeat;  background-color: #4492C8;  border-top: 3px solid Black;   }
-h1{ margin: 0; padding: 40px 0 0 0; font-family: "trebuchet ms",arial,tahoma,verdana,sans-serif; font-weight: normal; letter-spacing: .005em; color: White;  font-size: 20pt;  }
-
-#CONTENT{ width:760px; margin-left:auto; margin-right:auto;   }
-h2{ margin: 0; padding: 24px 0 7px 40px; font-family: "trebuchet ms",arial,tahoma,verdana,sans-serif; font-weight: normal; letter-spacing: .005em; color: White; font-size: 15pt; }
-#TEXT{ padding: 35px 40px 35px 40px; border-bottom: 1px solid #484848; border-top: 1px solid #484848; background-color: #222222; }
-#TEXT p{	margin-bottom: 1em;}
-
-#FOOTER{	width:760px; margin-top:27px; margin-left:auto; margin-right:auto;  border-top: 4px solid #363636;  text-align: right;  padding-top: 5px;   }
-#FOOTER p{ font-size: 11px; line-height: 14px; margin: 0;  color: #DDDDDD; }
-#FOOTER a{ font-size: 11px;	font-weight: normal;	text-decoration: none;  color: White;    }
-#FOOTER a:hover{ color: white; text-decoration: underline; }
+Hi Stephanie ;)
 	
-</style>
 </body>
 </html>
