--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="page">
 
 <div id="header">
-<h1><a href="#">Your Web Site Title</a></h1>
+<h1><a href="#">Hi Stephanie ;)</a></h1>
 <h2>Your Web Site Sub-Title Goes Here</h2>
 </div>
 
