--- a/index.html
+++ b/index.html
@@ -131,7 +131,24 @@ Copyright &copy; 2010 by <a href="#">You</a> | Design by <a href="http://www.min
 
 </div>
 
-		
+
+	
+	
+	<script>
+function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
+	
+	
+	
+	
+	
 </body>
 
 </html>
