--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <title>Riley's Website</title>	
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<style>
 body {
@@ -13,7 +11,7 @@ body {
 }
 
 .mobile-container {
-  max-width: 85%;
+  max-width: 80%;
   margin: auto;
   background-color: #444;
   height: 550px;
@@ -43,7 +41,7 @@ body {
   background: #333;
   display: block;
   position: absolute;
-  right: 550px;
+  right: 1;
   top: 0;
 }
 
