--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 .topnav a.icon {
   background: #333;
   display: block;
-  position: absolute;
+  position: relative;
   right: 0;
   top: 0;
 }
