--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {
-  background: url(images/skyline.jpg) no-repeat center top;
+  background: url(images/skyline.webp) no-repeat center top;
   font-family: Arial, ;
 }
 
