--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Riley's Website</head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {
-  background: url(images/Old_port_skyline.jpg) no-repeat center top;
+  
+  background-image: url('Old_port_skyline.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  
+  
   font-family: Arial, ;
 }
 
@@ -55,8 +62,7 @@ body {
 }
 </style>
 </head>
-<body>
-
+<body>  
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
 
