--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Riley's Website</head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {
-  font-family: Arial, ;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .mobile-container {
@@ -55,7 +54,8 @@ body {
 }
 </style>
 </head>
-<body>  
+<body>
+
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
 
