--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ body {
 }
 
 .active {
-  background-color: green;
+  background-image: url("test.jpg");
+ background-color: green;
   color: white;
 }
 </style>
