--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
 }
 
 .active {
-  background-image: url("test.png");
+  background-image: url("city.png");
  background-color: green;
   color: white;
 }
