--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ body {
 }
 
 .active {
-  background-image: url("city.png");
- background-color: green;
+  background-image: url("cut.png");
+ background-color: tan;
   color: white;
 }
 </style>
