--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
   color: white;
   padding: 3% 5%;
   text-decoration: none;
-  font-size: 40px;
+  font-size: 60px;
   display: block;
 }
 
@@ -49,8 +49,8 @@ body {
 }
 
 .active {
-  background-image: url("cut.png");
- background-color: tan;
+  background-image: url("test.png");
+ background-color: #1a3300;
   color: white;
 }
 </style>
