--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
   color: white;
   padding: 3% 5%;
   text-decoration: none;
-  font-size: 80px;
+  font-size: 70px;
   display: block;
 }
 
@@ -49,8 +49,8 @@ body {
 }
 
 .active {
-  background-image: url("city.png");
- background-color: #003300;
+  background-image: url("cut.png");
+ background-color: #800000;
   color: white;
 }
 </style>
