--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@ body {
   top: 0;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.topnav a:hover {;
 }
 
 .active {
   background-image: url("cut.png");
- background-color: #800000;
+ background-color: #b30000;
   color: white;
 }
 </style>
