--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ body {
 <div class="topnav">
   <a href="#home" class="active">Home</a>
   <div id="myLinks">
+    <a hreg="index.html">Home</a>
     <a href="#news">News</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
