--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ body {
   top: 0;
 }
 
-.topnav a:hover {;
+.topnav a:hover {
+  color: grey;
 }
 
 .active {
@@ -62,7 +63,6 @@ body {
 <div class="topnav">
   <a href="#home" class="active">Home</a>
   <div id="myLinks">
-    <a hreg="index.html">Home</a>
     <a href="#news">News</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
