--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ body {
     <a href="#news">News</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
+    <a> href="Links.html">Links</a>
   </div>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
