--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
   
-    <h1>Riley Bunch;
+    <h1 {
+  background-color: #444;
+}>
+    Riley Bunch
     background-color: #444
     </h1>
     
