--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
   </head>
   <body>
   
-    <h1 {
-  background-color: #444;
-}>
-    Riley Bunch
-    background-color: #444
-    </h1>
+    <div class="heading">
+  <h1>Riley Bunch</h1>
+</div>
     
-<style>
+<style> 
+  
+  .heading {
+    max-width: 85%;
+    margin: auto;
+    background-color: #444;
+    height: 20px;
+      color: white;
+    border-radius: 3%
+}
+  
+  
+  
+  
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
