--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <style> 
   
   .heading {
-    max-width: 85%;
-    margin: auto;
+    max-width: 90%;
+    margin: none;
     background-color: #444;
-    height: 20px;
+    height: 15px;
       color: white;
-    border-radius: 3%
+    border-radius: 0%;
+    position: relative;
 }
   
   
@@ -32,7 +33,7 @@ body {
 }
 
 .mobile-container {
-  max-width: 85%;
+  max-width: 90%;
   margin: auto;
   background-color: #444;
   height: 1000px;
