--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   
   .heading {
     max-width: 90%;
-    margin: none;
+    margin: auto;
     background-color: #444;
-    height: 15px;
+    height: 35px;
       color: white;
     border-radius: 0%;
     position: relative;
