--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
   
     <div class="heading">
-  <h1>Riley Bunch</h1>
+      <h1><center>Riley Bunch</center></h1>
 </div>
     
 <style> 
@@ -39,7 +39,10 @@ body {
   height: 1000px;
   color: white;
   border-radius: 3%;
+  font-size: 20px;
+  font-family: impact;
 }
+  
 
 .topnav {
   overflow: hidden;
