--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     max-width: 90%;
     margin: auto;
     background-color: #444;
-    height: 35px;
+    height: 50px;
       color: white;
     border-radius: 0%;
     position: relative;
     font-size: 20px;
-  font-family: impact;
+  font-family: monospace;
 }
   
   
