--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     border-radius: 0%;
     position: relative;
     font-size: 20px;
-  font-family: monospace;
+  font-family: fantasy;
 }
   
   
