--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     max-width: 100%;
     margin: auto;
     background-color: #444;
-    height: 50px;
+    height: 40px;
       color: white;
     border-radius: 0%;
     position: relative;
@@ -36,7 +36,7 @@ body {
   background-color: #444;
   height: 1000px;
   color: white;
-  border-radius: 3%;
+  border-radius: 0%;
 }
   
 
@@ -99,7 +99,7 @@ body {
 <div style="padding-left:5%">
   
   <div class="heading">
-      <h1><center>Riley Bunch</center></h1>
+      <h1>Riley Bunch</h1>
 </div>
   
   <h3>Vertical Mobile Navbar</h3>
