--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {
 
 .topnav a {
   color: white;
-  *****
+  padding: 3% 5%;
   text-decoration: none;
   font-size: 70px;
   display: block;
