--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   .heading {
     max-width: 100%;
-    margin: none;
+    margin: 0px;
     background-color: #444;
     height: 40px;
       color: white;
@@ -32,7 +32,7 @@ body {
 
 .mobile-container {
   max-width: 100%;
-  margin: none;
+  margin: 0px;
   background-color: #444;
   height: 1000px;
   color: white;
