--- a/index.html
+++ b/index.html
@@ -13,17 +13,24 @@
   
   .heading {
     max-width: 100%;
-    margin: -5px;
+    margin: -10px;
     background-color: #444;
     height: 40px;
       color: white;
     border-radius: 0%;
     position: relative;
     font-size: 35px;
-  font-family: fantasy;
+  font-family: Helvetica;
+    padding-left:5%;
 }
   
   
+  
+  
+  .Text {
+    padding-left:7%;
+    margin: auto;
+  }
   
   
 body {
@@ -32,7 +39,7 @@ body {
 
 .mobile-container {
   max-width: 100%;
-  margin: -5px;
+  margin: -10px;
   background-color: #444;
   height: 1000px;
   color: white;
@@ -96,8 +103,9 @@ body {
   </a>
 </div>
 
-<div style="padding-left:5%">
   
+  
+<div class="Text">
   <div class="heading">
       <h1>Riley Bunch</h1>
 </div>
