--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
   
   .Text {
-    padding-left:0%;
+    padding-left:10%;
     margin: 5px;
   }
   
@@ -63,6 +63,7 @@ body {
   text-decoration: none;
   font-size: 70px;
   display: block;
+  margin: -10px;
 }
 
 .topnav a.icon {
@@ -71,6 +72,7 @@ body {
   position: absolute;
   right: 0;
   top: 0;
+  margin: -10px;
 }
 
 .topnav a:hover {
