--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     position: relative;
     font-size: 35px;
   font-family: Helvetica;
-    padding-left:-5%;
+    padding-left: 0%;
 }
   
   
@@ -32,6 +32,7 @@
   
   .Text {
     padding-left:10%;
+    margin: 3%;
   }
   
   
