--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   
   
   .heading {
+    background-image: url("Logo.png");
     max-width: 100%;
     background-color: #444;
     height: 40px;
