--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ body {
 </div>
   
   
+  <img src="Logo.png" width="500" height="200">
+  
+  
 <div class="Text">
   <h3>Vertical Mobile Navbar</h3>
   <p>This example demonstrates how a navigation menu on a mobile/smart phone could look like.</p>
