--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 }
   
   
+  .Riley {
+    padding-left: 50%;
+    padding-right: 50%;
+  }
+  
   
   
   .Text {
@@ -111,8 +116,10 @@ body {
 </div>
   
   
+  <div class="Riley">
   <img src="Logo.png" width="290" height="490">
-  
+  </div>
+    
   
 <div class="Text">
   <h3>Vertical Mobile Navbar</h3>
