--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body {
   
   
   <div class="Riley">
-  <img src="Logo.png" width="290" height="490">
+  <img src="Riley.png" width="290" height="490">
   </div>
     
   
