--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@ body {
 
 <!-- Top Navigation Menu -->
 <div class="topnav">
-  <a href="#home" class="active">Home</a>
-  
-  <div class="Riley">
+  <a href="#home" class="active"><div class="Riley">
   <img src="Logo.png" width="800" height="300">
-  </div>
+  </div></a>
+  
+  
   
   
   <div id="myLinks">
