--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@ body {
   top: 0;
 }
 
-.topnav a:hover {
-  color: grey;
-}
+
 
 .active {
   background-image: url("cut.png");
@@ -85,10 +83,11 @@ body {
 <div class="mobile-container">
 
 <!-- Top Navigation Menu -->
-<div class="topnav">
-  <a href="#home" class="active"><div class="Riley">
+<div>
+  
+  <div class="Riley">
   <img src="Logo.png" width="500" height="150">
-  </div></a>
+  </div>
   
   
   
