--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@ body {
 }
 
 
+  
+  .topnav a:hover {
+  color: grey;
+}
+  
 
 .active {
   background-image: url("cut.png");
@@ -83,11 +88,11 @@ body {
 <div class="mobile-container">
 
 <!-- Top Navigation Menu -->
-<div>
+<div class="topnav">
   
-  <div class="Riley">
+  <a href="#home" class="active"><div class="Riley">
   <img src="Logo.png" width="500" height="150">
-  </div>
+    </div></a>
   
   
   
