--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   
   .Riley {
-    padding-left: 0%;
+    padding-left: -5%;
   }
   
   
@@ -44,7 +44,7 @@ body {
 .topnav {
   overflow: hidden;
   background-color: #333;
-  position: relative;
+  position: absolute;
 }
 
 .topnav #myLinks {
