--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 .topnav {
   overflow: hidden;
   background-color: #333;
-  position: absolute;
+  position: relative;
 }
 
 .topnav #myLinks {
@@ -62,7 +62,7 @@ body {
 .topnav a.icon {
   background: #333;
   display: block;
-  position: absolute;
+  position: relative;
   right: 0;
   top: 0;
 }
