--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 .topnav a.icon {
   background: #333;
   display: block;
-  position: relative;
+  position: absolute;
   right: 0;
   top: 0;
 }
