--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@ body {
   background: #333;
   display: block;
   position: absolute;
+  height: 200px;
+  width: 10%;
   right: 0;
-  top: 5%;
+  top: 0;
 }
 
 
