--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   
   .Riley {
-    margin: 3%;
+    margin: 1%;
   }
   
   
@@ -63,7 +63,8 @@ body {
   background: #333;
   display: block;
   position: absolute;
-  
+  height: 200px;
+  width: 7%;
   right: 0;
   top: 0;
 }
@@ -77,7 +78,7 @@ body {
 
 .active {
   background-image: url("cut.png");
-  max-height: 150px;
+  height: 200px;
  background-color: #b30000;
   color: white;
 }
