--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
 
 .topnav a {
   color: white;
-  padding: 5% 5%;
+  margin: 2%;
   text-decoration: none;
   font-size: 100px;
   display: block;
