--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
 
 .topnav a {
   color: white;
-  margin: 10%;
+  padding: 4% 4%;
   text-decoration: none;
   font-size: 100px;
   display: block;
