--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ body {
   
   
   <div id="myLinks">
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="About.html">About</a>
+    <a href="Resume.html">Resume</a>
+    <a href="Experience.html">Experience</a>
     <a href="Links.html">Links</a>
   </div>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
