--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body {
   
   
   <div id="myLinks">
-    <a href="About.html">About</a>
+    <a href="Index.html">About</a>
     <a href="Resume.html">Resume</a>
     <a href="Experience.html">Experience</a>
     <a href="Links.html">Links</a>
