--- a/Links.html
+++ b/Links.html
@@ -113,9 +113,11 @@ body {
     
   
 <div class="Text">
-  <h3>Vertical Mobile Navbar</h3>
+  <h3>This is a list of any online source that I used to create this website. </h3>
   <p>https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/</p>
-  <p>Click on the hamburger menu (three bars) in the top right corner, to toggle the menu.</p>
+  <p>This is the background picture of my heading.</p>
+  <p></p>
+  <p>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar</p>
 </div>
 
 <!-- End smartphone / tablet look -->
