--- a/Links.html
+++ b/Links.html
@@ -114,10 +114,10 @@ body {
   
 <div class="Text">
   <h3>This is a list of any online source that I used to create this website. </h3>
-  <p>https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/</p>
-  <p>This is the background picture of my heading.</p>
-  <p></p>
-  <p>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar</p>
+  <p>https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/<br />
+  This is the background picture of my heading.</p>
+  <p>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar<br />
+    https://www.logogenie.net/</p>
 </div>
 
 <!-- End smartphone / tablet look -->
