--- a/Links.html
+++ b/Links.html
@@ -23,8 +23,9 @@
   
   
   .Text {
-    padding-left:10%;
+    padding-left:5%;
     margin: 5%;
+    font-size: 12px;
   }
   
   
@@ -113,7 +114,7 @@ body {
     
   
 <div class="Text">
-  <h3>This is a list of any online source that I used to create this website. </h3>
+  <h2>This is a list of any online source that I used to create this website. </h2>
   <p>https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/<br />
   This is the background picture of my heading.</p>
   <p>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar<br />
