--- a/Links.html
+++ b/Links.html
@@ -115,10 +115,12 @@ body {
   
 <div class="Text">
   <h2>This is a list of any online source that I used to create this website. </h2>
-  <p>https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/<br />
-  This is the background picture of my heading.</p>
-  <p>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar<br />
-    https://www.logogenie.net/</p>
+  <p>>https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/<br />
+  --- This is the background picture of my heading.</p>
+  <p>>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar<br />
+    --- This is a very rough template for how I constructed the navigation menu.</p>
+   <p>> https://www.logogenie.net/<br />
+     --- This is a website where you can make a custom logo, I used elements from this website.</p>
 </div>
 
 <!-- End smartphone / tablet look -->
