--- a/Links.html
+++ b/Links.html
@@ -114,7 +114,8 @@ body {
     
   
 <div class="Text">
-  <h2>This is a list of any online source that I used to create this website. </h2>
+  <h2>Works Cited</h2>
+  <p>This is a list of any online source that I used to create this website. </p>
   <p>>https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/<br />
   --- This is the background picture of my heading.</p>
   <p>>https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar<br />
