--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 
 .topnav a.icon {
   background: #333;
-  display: block;
+  display: flex;
   position: absolute;
   height: 80px;
   width: 5%;
