--- a/index.html
+++ b/index.html
@@ -72,6 +72,55 @@ body {
 
 
   
+  
+  
+  
+  
+  
+  
+  
+  .topnav a.icon span {
+    display: block;
+  }
+  
+  .topnav a.icon span:not(:last-child) {
+    margin-bottom:6px
+  }
+  
+  
+  .topnav a.icon span:nth-child(1){
+  width: 20px;
+    height: 4px;
+  }
+  
+   .topnav a.icon span:nth-child(2){
+  width: 30px;
+    height: 4px;
+  }
+  
+   .topnav a.icon span:nth-child(3){
+  width: 20px;
+    height: 4px;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   .topnav a:hover {
   color: grey;
 }
