--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
 <!-- Top Navigation Menu -->
 <div class="topnav">
   
-  <a href="#home" class="active"><div class="Riley">
+  <a href="index.html" class="active"><div class="Riley">
   <img src="Logo.png" width="500" height="150">
     </div></a>
   
