--- a/Experience.html
+++ b/Experience.html
@@ -54,9 +54,9 @@ body {
 
 .topnav a {
   color: white;
-  padding: 5% 5%;
+  padding: 4.9% 4%;
   text-decoration: none;
-  font-size: 80px;
+  font-size: 70px;
   display: block;
 }
 
@@ -65,7 +65,7 @@ body {
   display: block;
   position: absolute;
   height: 80px;
-  width: 5%;
+  width: 4%;
   right: 0;
   top: 0;
 }
@@ -93,7 +93,7 @@ body {
 <!-- Top Navigation Menu -->
 <div class="topnav">
   
-  <a href="#home" class="active"><div class="Riley">
+  <a href="index.html" class="active"><div class="Riley">
   <img src="Logo.png" width="500" height="150">
     </div></a>
   
