--- a/Resume.html
+++ b/Resume.html
@@ -101,7 +101,7 @@ body {
   
   
   <div id="myLinks">
-    <a href="index.html">About</a>
+    <a href="index.html">Home</a>
     <a href="Resume.html">Resume</a>
     <a href="Experience.html">Experience</a>
     <a href="Links.html">Links</a>
