--- a/Links.html
+++ b/Links.html
@@ -122,6 +122,11 @@ body {
     --- This is a very rough template for how I constructed the navigation menu.</p>
    <p> > https://www.logogenie.net/<br />
      --- This is a website where you can make a custom logo, I used elements from this website.</p>
+  <h3>Learn to code<h3>
+  <p>I would highly recommend the following sources if you are interested in learning HTML, CSS, or JavaScript.</ br>
+    --- https://www.codecademy.com/catalog/all
+    --- https://www.w3schools.com/default.asp</p>
+  
 </div>
 
 <!-- End smartphone / tablet look -->
