--- a/Links.html
+++ b/Links.html
@@ -116,16 +116,16 @@ body {
 <div class="Text">
   <h2>Works Cited</h2>
   <p>This is a list of any online source that I used to create this website. </p>
-  <p> > https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/<br />
-  • This is the background picture of my heading.</p>
-  <p> > https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar<br />
-    • This is a very rough template for how I constructed the navigation menu.</p>
-   <p> > https://www.logogenie.net/<br />
-     • This is a website where you can make a custom logo, I used elements from this website.</p>
+  <p> • https://pixabay.com/illustrations/detroit-city-skyline-detroit-city-5096060/<br />
+  > This is the background picture of my heading.</p>
+  <p> • https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_mobile_navbar<br />
+    > This is a very rough template for how I constructed the navigation menu.</p>
+   <p> • https://www.logogenie.net/<br />
+     > This is a website where you can make a custom logo, I used elements from this website.</p>
   <h2>Learn to code</h2>
   <p>I would highly recommend the following sources if you are interested in learning HTML, CSS, or JavaScript.<br />
-    > https://www.codecademy.com/catalog/all<br />
-    > https://www.w3schools.com/default.asp</p>
+    • https://www.codecademy.com/catalog/all<br />
+    • https://www.w3schools.com/default.asp</p>
   
 </div>
 
