--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
     
   
 <div class="Text">
-  <h3>Vertical Mobile Navbar</h3>
+  <h1><center>Mission</center></h1>
   <p>This example demonstrates how a navigation menu on a mobile/smart phone could look like.</p>
   <p>Click on the hamburger menu (three bars) in the top right corner, to toggle the menu.</p>
 </div>
